# Django-CRM

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml  requirements.prod.txt  requirements.txt
.github/workflows/: sync-google-contacts.yaml
src/: manage.py
src/cfehome/: settings.py  urls.py
src/contacts/: apps.py  models.py  views.py
src/contacts/migrations/: 0001_initial.py  0002_contact_last_edited_by_alter_contact_user.py  0002_contact_user.py  0003_contact_created_at.py  0004_contact_updated_at.py  0005_contact_first_name_contact_last_name_and_more.py  0006_contact_last_sync.py
src/dashboard/: views.py
src/events/: handlers.py  models.py  services.py  signals.py
src/events/migrations/: 0001_initial.py  0002_alter_event_type.py  0002_remove_event_name.py  0003_alter_event_type.py  0003_event_user.py  0004_remove_event_timestamp_event_time.py  0005_alter_event_type.py
src/helpers/: mygoogler.py
src/mystaticfiles/learn/: custom.css
src/templates/: base.html  dashboard.html
src/templates/contacts/: detail.html  list.html
src/templates/contacts/snippets/: contact-card.html
